--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 /*@import "config/variable";*/
 /*@import "mixin/*";*/
-/*@import "font-awesome";*/
+@import "font-awesome";
 @import "./reset";
 @import "modules/*";
