Generate UsersController and modify sign-up form

--- a/app/assets/stylesheets/modules/_account.scss
+++ b/app/assets/stylesheets/modules/_account.scss
@@ -78,6 +78,7 @@
         background-color: #eb6f6f;
         border-radius: 4px;
         color: white;
+        border: none;
         &:hover {
           cursor: pointer;
         }
