--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -1,114 +1,4 @@
 = render partial: "/shared/header"
 .container
-  .pins
-    .pins__item
-      .pins__item__wrapper
-        = link_to "", "/#", class: "item-link"
-        = image_tag "chari.jpg", class: "item-img"
-        .item-info
-          .item-info__title titletitletitle
-          .item-info__pin
-            = fa_icon("thumb-tack")
-            %span 16
-        .item-description
-          %p descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription
-      .pins__item__user
-        = link_to "", "/#2", class: "item-user--link"
-        .item-user--left
-          = image_tag "obasan.png", class: "user-avatar"
-        .item-user--right
-          .user-name Koji Tsuruta
-          .user-board My Favorite
-    .pins__item
-      .pins__item__wrapper
-        = link_to "", "/#", class: "item-link"
-        = image_tag "lump.jpg", class: "item-img"
-        .item-info
-          .item-info__title titletitletitle
-          .item-info__pin
-            = fa_icon("thumb-tack")
-            %span 16
-        .item-description
-          %p descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription
-      .pins__item__user
-        = link_to "", "/#2", class: "item-user--link"
-        .item-user--left
-          = image_tag "obasan.png", class: "user-avatar"
-        .item-user--right
-          .user-name Koji Tsuruta
-          .user-board My Favorite
-    .pins__item
-      .pins__item__wrapper
-        = link_to "", "/#", class: "item-link"
-        = image_tag "radio.jpg", class: "item-img"
-        .item-info
-          .item-info__title titletitletitle
-          .item-info__pin
-            = fa_icon("thumb-tack")
-            %span 16
-        .item-description
-          %p descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription
-      .pins__item__user
-        = link_to "", "/#2", class: "item-user--link"
-        .item-user--left
-          = image_tag "obasan.png", class: "user-avatar"
-        .item-user--right
-          .user-name Koji Tsuruta
-          .user-board My Favorite
-    .pins__item
-      .pins__item__wrapper
-        = link_to "", "/#", class: "item-link"
-        = image_tag "chari.jpg", class: "item-img"
-        .item-info
-          .item-info__title titletitletitle
-          .item-info__pin
-            = fa_icon("thumb-tack")
-            %span 16
-        .item-description
-          %p descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription
-      .pins__item__user
-        = link_to "", "/#2", class: "item-user--link"
-        .item-user--left
-          = image_tag "obasan.png", class: "user-avatar"
-        .item-user--right
-          .user-name Koji Tsuruta
-          .user-board My Favorite
-    .pins__item
-      .pins__item__wrapper
-        = link_to "", "/#", class: "item-link"
-        = image_tag "radio.jpg", class: "item-img"
-        .item-info
-          .item-info__title titletitletitle
-          .item-info__pin
-            = fa_icon("thumb-tack")
-            %span 16
-        .item-description
-          %p descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription
-      .pins__item__user
-        = link_to "", "/#2", class: "item-user--link"
-        .item-user--left
-          = image_tag "obasan.png", class: "user-avatar"
-        .item-user--right
-          .user-name Koji Tsuruta
-          .user-board My Favorite
-    .pins__item
-      .pins__item__wrapper
-        = link_to "", "/#", class: "item-link"
-        = image_tag "chari.jpg", class: "item-img"
-        .item-info
-          .item-info__title titletitletitle
-          .item-info__pin
-            = fa_icon("thumb-tack")
-            %span 16
-        .item-description
-          %p descriptiondescriptiondescriptiondescriptiondescriptiondescriptiondescription
-      .pins__item__user
-        = link_to "", "/#2", class: "item-user--link"
-        .item-user--left
-          = image_tag "obasan.png", class: "user-avatar"
-        .item-user--right
-          .user-name Koji Tsuruta
-          .user-board My Favorite
-  .post
-    .post__button
-      = link_to "+", "/#4", class: "post__button--link"
+  = render partial: "/shared/pins"
+  = render partial: "/shared/post"
