--- a/app/assets/stylesheets/modules/_account.scss
+++ b/app/assets/stylesheets/modules/_account.scss
@@ -75,7 +75,7 @@
         height: 36px;
         text-align: center;
         line-height: 36px;
-        background-color: #eb6f6f;
+        background-color: $accent-color;
         border-radius: 4px;
         color: white;
         border: none;
