--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "config/variables";
-/*@import "mixin/*";*/
+@import "mixin/*";
 @import "font-awesome";
 @import "./reset";
 @import "modules/*";
