--- a/app/assets/stylesheets/modules/_account.scss
+++ b/app/assets/stylesheets/modules/_account.scss
@@ -3,32 +3,10 @@
   background-color: gray;
   height: 100vh;
   .button {
-    height: 36px;
-    border-radius: 4px;
-    font-size: 15px;
-    font-weight: bold;
-    margin-top: 10px;
-    text-align: center;
-    background-color: white;
+    @include textBtn();
     position: absolute;
     top: 15px;
     right: 25px;
-    .link {
-      width: 100%;
-      height: 100%;
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      &:link, &:visited, &:hover, &:active {
-        color: black;
-        text-decoration: none;
-      }
-    }
-    .link-text {
-      margin: 0 30px;
-      line-height: 36px;
-    }
   }
   .form {
     width: 380px;
@@ -70,13 +48,10 @@
         }
       }
       .submit-button {
+        @include textBtn();
         display: block;
-        width: 268px;
-        height: 36px;
-        text-align: center;
-        line-height: 36px;
+        width: 100%;
         background-color: $accent-color;
-        border-radius: 4px;
         color: white;
         border: none;
         &:hover {
