--- a/app/assets/stylesheets/modules/_board.scss
+++ b/app/assets/stylesheets/modules/_board.scss
@@ -9,26 +9,7 @@
       // position: fixed;
       // background-color: rgba(255, 255, 255, 0.95);
       .menu-button {
-        width: 48px;
-        height: 48px;
-        margin-right: 8px;
-        text-align: center;
-        border-radius: 50%;
-        position: relative;
-        background-color: #EFEFEF;
-        // display: inline;
-        // float: left;
-        .menu-link {
-          width: 100%;
-          height: 100%;
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
-        .menu-icon {
-          line-height: 48px;
-        }
+        @include iconBtn(48px);
       }
     }
     &__info {
