--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,14 +1,17 @@
 .header {
-  height: 56px;
+  height: 64px;
   display: flex;
-  padding: 4px 16px;
+  padding: 0 16px;
   border-bottom: 1px solid #EFEFEF;
+  align-items: center;
   &__logo {
     width: 56px;
     height: 56px;
     border-radius: 50%;
     position: relative;
-    background-color: #EFEFEF;
+    &:hover {
+      background-color: #EFEFEF;
+    }
     .logo-link {
       width: 100%;
       height: 100%;
@@ -24,7 +27,7 @@
   &__search {
     flex: 1;
     height: 40px;
-    margin: 8px 16px;
+    margin: 0 16px;
     .form__box {
       width: 100%;
       height: 40px;
@@ -50,23 +53,13 @@
     }
   }
   &__menu {
-    width: 40px;
-    height: 40px;
-    margin: 8px;
-    text-align: center;
-    border-radius: 50%;
-    position: relative;
-    background-color: #EFEFEF;
-    .menu-link {
-      width: 100%;
-      height: 100%;
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
+    .icon-button {
+      @include iconBtn(48px);
     }
-    .menu-icon {
-      line-height: 40px;
+    .text-button {
+      @include textBtn();
+      background-color: $accent-color;
+      color: white;
     }
   }
 }
