--- a/app/assets/stylesheets/modules/_pin.scss
+++ b/app/assets/stylesheets/modules/_pin.scss
@@ -37,57 +37,20 @@
       height: 36px;
       display: flex;
       padding: 8px 32px;
-      .menu-button {
-        width: 36px;
-        height: 36px;
-        margin-right: 8px;
-        text-align: center;
-        border-radius: 50%;
-        position: relative;
-        background-color: #EFEFEF;
-        .menu-link {
-          width: 100%;
-          height: 100%;
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-        }
-        .menu-icon {
-          line-height: 36px;
+      .menu--left {
+        flex: 1;
+        display: flex;
+        .menu-button {
+          @include iconBtn(36px);
         }
       }
       .menu--right {
-        flex: 1;
+        // flex: 1;
         position: relative;
         .button {
-          height: 36px;
-          border-radius: 4px;
-          font-size: 15px;
-          font-weight: bold;
-          // margin-top: 10px;
-          text-align: center;
+          @include textBtn();
           background-color: $accent-color;
-          position: absolute;
           color: white;
-          top: 0;
-          right: 0;
-          .link {
-            width: 100%;
-            height: 100%;
-            display: block;
-            position: absolute;
-            top: 0;
-            right: 0;
-            &:link, &:visited, &:hover, &:active {
-              color: black;
-              text-decoration: none;
-            }
-          }
-          .save-text {
-            margin: 0 30px;
-            line-height: 36px;
-          }
         }
       }
     }
