--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -4,16 +4,17 @@
     = fa_icon("times", class: "fa-2x menu-icon")
   .pin
     .pin__menu
-      .menu-button
-        = link_to "", "/#1", class: "menu-link"
-        = fa_icon("pencil", class: "fa-lg menu-icon")
-      .menu-button
-        = link_to "", "/#1", class: "menu-link"
-        = fa_icon("arrows", class: "fa-lg menu-icon")
+      .menu--left
+        .menu-button
+          = link_to "", "/#1", class: "menu-link"
+          = fa_icon("pencil", class: "fa-lg menu-icon")
+        .menu-button
+          = link_to "", "/#1", class: "menu-link"
+          = fa_icon("arrows", class: "fa-lg menu-icon")
       .menu--right
         .button
           = link_to "", "/#", class: "link"
-          %span.save-text 保存
+          %span.link-text 保存
     .pin__title
       %h2.pin__title__text ほにゃほにゃ
     .pin__image
