Create show trigger

--- a/app/assets/stylesheets/modules/_board.scss
+++ b/app/assets/stylesheets/modules/_board.scss
@@ -53,4 +53,26 @@
       }
     }
   }
+  .show-trigger {
+    height: 44px;
+    width: 136px;
+    text-align: center;
+    margin: 15px auto;
+    display: flex;
+    .select {
+      background-color: $mono-color-light;
+    }
+    &__option {
+      width: 60px;
+      height: 36px;
+      border-radius: 18px;
+      line-height: 36px;
+      font-size: 14px;
+      margin: 4px;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+  }
 }
