Set back button

--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -1,6 +1,6 @@
 .container-pin
   .close-button
-    = link_to "", "/#1", class: "menu-link"
+    = link_to "", "javascript:history.back()", class: "menu-link"
     = fa_icon("times", class: "fa-2x menu-icon")
   .pin
     .pin__menu
