--- a/app/assets/stylesheets/mixin/_mixin.scss
+++ b/app/assets/stylesheets/mixin/_mixin.scss
@@ -2,11 +2,12 @@
   height: 36px;
   border-radius: 4px;
   font-size: 15px;
-  font-weight: bold;
+  // font-weight: bold;
   text-align: center;
-  background-color: white;
+  background-color: $mono-color-light;
   line-height: 36px;
   position: relative;
+  cursor: pointer;
   .link {
     width: 100%;
     height: 100%;
@@ -20,7 +21,7 @@
     }
   }
   .link-text {
-    margin: 0 30px;
+    margin: 0 20px;
   }
 }
 
