--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -29,11 +29,21 @@
     height: 40px;
     margin: 0 16px;
     .form__box {
-      width: 100%;
-      height: 40px;
-      background-color: #EFEFEF;
-      border-radius: 4px;
-      display: flex;
+      position: relative;
+      display: block;
+      .search-icon {
+        line-height: 40px;
+        position: absolute;
+        top: 0;
+        left: 10px;
+      }
+      .search-input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding-left: 50px;
+        margin: 0;
+      }
       &--left {
         width: 52px;
         height: 100%;
@@ -42,13 +52,6 @@
       }
       &--right {
         flex: 1;
-        .search-input {
-          height: 100%;
-          width: 100%;
-          background-color: transparent;
-          border: 0;
-          outline: none;
-        }
       }
     }
   }
