--- a/app/assets/stylesheets/modules/_modal.scss
+++ b/app/assets/stylesheets/modules/_modal.scss
@@ -1,5 +1,4 @@
 .modal {
-  // visibility: hidden;
   display: none;
   width:100%;
   height:100%;
@@ -21,7 +20,6 @@
   }
   &__window {
     width: 600px;
-    // max-height: 600px;
     border-radius: 8px;
     background-color: white;
     margin: auto;
@@ -29,14 +27,27 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    // top: 0;
-    // right: 0;
-    // bottom: 0;
-    // left: 0;
     z-index: 15;
     display: flex;
-    flex-direction: column;
-    // padding: 20px 10px;
+    .modal-image{
+      margin: 32px 0px;
+      .preview {
+        margin: auto;
+        display: block;
+        width: 216px;
+        height: auto;
+        border-radius: 8px;
+      }
+    }
+    &--left {
+      flex: 1;
+      border-right: 1px solid $mono-color-light;
+    }
+    &--right {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
     &__header {
       height: 32px;
       padding: 25px 25px 15px;
@@ -55,6 +66,10 @@
     &__container {
       flex: 1;
       overflow: auto;
+      width: 552px;
+      margin: 0 auto;
+      padding: 15px 24px;
+      background-color: white;
       .content {
         margin: 15px 25px 25px;
         .file-button {
@@ -70,51 +85,29 @@
       }
     }
     &__footer {
-      height: 64px;
+      // height: 64px;
       font-size: 16px;
       font-weight: bold;
-      cursor: pointer;
-      display: none;
       align-items: center;
+      padding: 25px 25px;
       border-top: 1px solid $mono-color-light;
-      &:hover {
-        background-color: $mono-color-light;
-        border-radius: 0 0 8px;
-      }
-      // line-height: 64px;
       .fa-plus-circle {
         color: $accent-color;
         margin-left: 23px;
         margin-right: 12px;
       }
-    }
-  }
-  &__wrapper{
-    display: flex;
-    &--left {
-      flex: 1;
-      // height: 100%;
-      border-right: 1px solid $mono-color-light;
-      .modal-image{
-        // width: 100%;
-        margin: 32px 0px;
-        // padding: 0;
-        // text-align: center;
-        .preview {
-          // margin: auto;
-          margin: auto;
-          display: block;
-          width: 216px;
-          height: auto;
-          border-radius: 8px;
+      .submit-button {
+        @include textBtn();
+        display: block;
+        width: 100px;
+        background-color: $accent-color;
+        color: white;
+        border: none;
+        float: right;
+        &:hover {
+          cursor: pointer;
         }
       }
-    }
-    &--right {
-      flex: 1;
-      // height: 100%;
-      display: flex;
-      flex-direction: column;
     }
   }
 }
