--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -10,14 +10,10 @@
     .form-area
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
-        .field
-          = f.text_field :nickname, autofocus: true, placeholder: "ニックネーム"
-        .field
-          = f.email_field :email, placeholder: "メール"
-        .field
-          = f.password_field :password, autocomplete: "off", placeholder: "パスワードを作成"
-        .field
-          = f.password_field :password_confirmation, autocomplete: "off", placeholder: "パスワードを再入力"
+        = f.text_field :nickname, autofocus: true, placeholder: "ニックネーム", class: "field-input"
+        = f.email_field :email, placeholder: "メール", class: "field-input"
+        = f.password_field :password, autocomplete: "off", placeholder: "パスワードを作成", class: "field-input"
+        = f.password_field :password_confirmation, autocomplete: "off", placeholder: "パスワードを再入力", class: "field-input"
         = f.submit "続行", class: "submit-button"
       .notice アカウントを作成しても、Pincredibleの利用規約とプライバシーポリシーに同意するものとみなしません。
   .footer
