--- a/app/views/shared/_boards.html.haml
+++ b/app/views/shared/_boards.html.haml
@@ -2,61 +2,23 @@
   - if @user == current_user
     .boards__item
       .boards__item__wrapper
-        .item-object
-          = link_to "", "/#", class: "item-link"
+        .item-object.modal-open{data: {target: "modal-boardNew"}}
           .item-img
             = fa_icon("plus-circle", class: "fa-3x")
         .item-info
           .item-info__text 新規ボードを作成
-  .boards__item
-    .boards__item__wrapper
-      .item-object
-        = link_to "", "/#", class: "item-link"
-        = image_tag "chari.jpg", class: "item-img"
-      .item-info
-        .item-info--left
-          .item-title titletitletitle
-          .item-pin 16 ピン
-        .item-info--right
-          .item-edit
-            = link_to "", "/#2", class: "link"
-            %span.link-text 編集
-  .boards__item
-    .boards__item__wrapper
-      .item-object
-        = link_to "", "/#", class: "item-link"
-        = image_tag "chari.jpg", class: "item-img"
-      .item-info
-        .item-info--left
-          .item-title titletitletitle
-          .item-pin 16 ピン
-        .item-info--right
-          .item-edit
-            = link_to "", "/#2", class: "link"
-            %span.link-text 編集
-  .boards__item
-    .boards__item__wrapper
-      .item-object
-        = link_to "", "/#", class: "item-link"
-        = image_tag "chari.jpg", class: "item-img"
-      .item-info
-        .item-info--left
-          .item-title titletitletitle
-          .item-pin 16 ピン
-        .item-info--right
-          .item-edit
-            = link_to "", "/#2", class: "link"
-            %span.link-text 編集
-  .boards__item
-    .boards__item__wrapper
-      .item-object
-        = link_to "", "/#", class: "item-link"
-        = image_tag "chari.jpg", class: "item-img"
-      .item-info
-        .item-info--left
-          .item-title titletitletitle
-          .item-pin 16 ピン
-        .item-info--right
-          .item-edit
-            = link_to "", "/#2", class: "link"
-            %span.link-text 編集
+  - @boards.each do |board|
+    .boards__item
+      .boards__item__wrapper
+        .item-object
+          = link_to "", "/boards/#{board.id}", class: "item-link"
+          = image_tag "chari.jpg", class: "item-img"
+        .item-info
+          .item-info--left
+            .item-title #{board.title}
+            .item-pin 16 ピン
+          - if @user == current_user
+            .item-info--right
+              .item-edit
+                = link_to "", "/#2", class: "link"
+                %span.link-text 編集
