--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -22,3 +22,4 @@
   = render partial: "/shared/boards"
   = render partial: "/shared/pins", locals: {display: "hidden"}
   = render partial: "/shared/post"
+  = render partial: "/shared/modal-boardNew"
