--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -245,6 +245,7 @@ body {
     .avatar-image {
       width: 75px;
       height: 75px;
+      object-fit: cover;
       border-radius: 50%;
       margin-right: 15px;
     }
