--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -1,4 +1,5 @@
 = render partial: "/shared/header"
 .container
   = render partial: "/shared/pins"
-  = render partial: "/shared/post"
+  - if user_signed_in?
+    = render partial: "/shared/post"
